<resources>
    <string name="app_name">Testool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="service_ticker">testool is running</string>
    <string name="service_title">Testool</string>
    <string name="service_text">Test is running</string>
    <string name="service_text2">Monkey is running</string>
    <string name="service_text3">Monitor is running</string>
    <string name="service_text4">Remote is running</string>
    <string name="action_settings">Settings</string>
    <string name="appDescription">Android端实现的UI自动化测试工具</string>
    <string name="author">凯哥出品</string>
    <string name="syncCases">同步用例</string>
    <string name="updateCases">重新导入</string>
    <string name="logAndReport">日志报告</string>
    <string name="powerTest">耗电测试</string>
    <string name="uicrawlerTest">界面遍历</string>
    <string name="config">配置管理</string>
    <string name="share">分享</string>
    <string name="title_activity_edit_case">editCaseActivity</string>
    <string name="selectAll">全选</string>
    <string name="selectCon">反选</string>
    <string name="startTest">测试任务</string>
    <string name="more">更多</string>
    <string name="upgrade">关于</string>
    <string name="keep">进程保活</string>
    <string name="adb">无线adb</string>
    <string name="wakeup">唤醒测试</string>
    <string name="wake_up">唤醒测试</string>
    <string name="add_new">调试用例</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="image_croper">图片剪裁</string>
    <string name="image_edit">图片操作</string>
    <string name="clear_log">清空日志文件</string>
    <string name="monkeyTest">Monkey+</string>
    <string name="test_env">测试环境：</string>
    <string name="preview">preview</string>
    <string name="production">production</string>
    <string name="pre4test">preview4test</string>

    <string name="acquire_root_failed">获取Root权限失败！</string>
    <string name="adb_start_fail">开启adb服务失败！</string>
    <string name="adb_start">开启adb</string>
    <string name="adb_started">adb已开启！</string>
    <string name="adb_stop_fail">停止adb服务失败！</string>
    <string name="adb_stop">停止adb</string>
    <string name="adb_stopped">adb已停止！</string>
    <string name="net_error">wifi已断开！</string>
    <string name="wifi_off">wifi已断开！</string>
    <string name="tv_title">无线adb工具</string>
    <string name="about">无线adb工具\n功能：开启后可实现无线adb连接\n条件：手机需与服务器连接在同域网络的wifi下
    </string>
    <string name="ok">确定</string>
    <string name="about_title">关于</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="adb_on_screen_on">开启adb时屏幕保持常亮：</string>
    <string name="net_ok">已连接到wifi%s</string>
    <string name="bugreprot">抓取日志</string>
    <string name="codeCoverage">代码覆盖</string>
    <string name="testApp">目标应用:</string>
    <string name="loops">循环次数：</string>
    <string name="caseTag">用例标签：</string>
    <string name="retryTimes">重试次数：</string>
    <string name="taskId">任务序号：</string>
    <string name="taskResult">筛选结果：</string>
    <string name="taskDate">筛选批次：</string>
    <string name="setting">设置</string>
    <string name="start_accessibility">启用辅助功能</string>
    <string name="start_float">开启悬浮球</string>
    <string name="record_case">录制用例</string>
    <string name="test_plateform">测试平台</string>
    <string name="remote_control">允许远程</string>
    <string name="disable_remote_control">禁止远程</string>

</resources>
