<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear_log"
        android:orderInCategory="100"
        android:title="@string/clear_log"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_start_accessibility"
        android:orderInCategory="100"
        android:title="@string/start_accessibility"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_float"
        android:orderInCategory="100"
        android:title="@string/start_float"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/remote"
        android:icon="@drawable/eye_disabled"
        android:orderInCategory="100"
        android:title="@string/remote_control"
        app:showAsAction="always" />

</menu>
